# stunserver

./: CMakeLists.txt
common/: commonincludes.hpp  crc.hpp
networkutils/: stunsocket.h
server/: main.cpp  server.cpp  stunsocketthread.cpp  stunsocketthread.h  tcpserver.cpp  tcpserver.h
stuncore/: buffer.cpp  socketaddress.cpp  stunbuilder.cpp  stunreader.cpp
testcode/: testclientlogic.cpp  testreader.cpp
